# prompt-recipe-smith

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: pypi.yml  readthedocs.yml
docs/: Makefile
docs/source/: conf.py  design-direction.md  development.rst  index.md  index.rst  installation.rst  project-charter.md  quickstart.rst
docs/source/api/: index.rst
docs/source/concepts/: prompt-builder.md  prompt-recipe.md  prompt-session.md  prompt-template.md
examples/: prompt_recipe_smith_colab_demo.ipynb
examples/django/: README.md
examples/minimal/: basic_recipe.py  layered_recipe.py
src/prompt_recipe_smith/: __init__.py  builder.py  cli.py  exceptions.py  models.py  session.py
src/prompt_recipe_smith/output/: __init__.py  json_output.py  plain_text.py
src/prompt_recipe_smith/providers/: __init__.py  base.py  chatgpt.py
src/prompt_recipe_smith/recipes/: __init__.py  base.py  builtin.py
tests/: test_builder.py  test_builtin_recipes.py  test_cli.py  test_models.py  test_output_json.py  test_output_plain_text.py  test_session.py
