[project]
name = "prompt-recipe-smith"
version = "0.2.0"
description = "A Python package for building effective chat prompts from vague user ideas."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Eiichi YAMAMOTO" }
]
keywords = [
  "prompt",
  "prompt-engineering",
  "chatgpt",
  "llm"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yeiichi/prompt-recipe-smith"
Repository = "https://github.com/yeiichi/prompt-recipe-smith"
Issues = "https://github.com/yeiichi/prompt-recipe-smith/issues"

[project.optional-dependencies]
dev = [
  "furo",
  "myst-parser",
  "pytest",
  "ruff",
  "sphinx",
  "mypy",
  "python-semantic-release"
]

[dependency-groups]
dev = [
  "furo",
  "myst-parser",
  "pytest",
  "ruff",
  "sphinx",
  "mypy",
  "python-semantic-release"
]

[project.scripts]
prompt-recipe-smith = "prompt_recipe_smith.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
allow_zero_version = true
major_on_zero = false
build_command = "uv build"
